methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit= false
  if (estSurBiscuit()){
    return True
  }
  for (i<- 1 to 6){
    avance()
    if (estSurBiscuit()){
      for (j<- 1 to i){
        recule()
      }
      return true
    }
  }
  return false
}

